--- a/docs/hugo.yaml
+++ b/docs/hugo.yaml
@@ -22,18 +22,18 @@ menu:
       pageRef: /docs
       weight: 1
     - name: Search
-      weight: 4
+      weight: 2
       params:
         type: search
     - name: GitHub
-      weight: 5
+      weight: 3
       params:
         icon: github
 
 params:
   navbar:
     displayTitle: true
-    displayLogo: true
+    displayLogo: false
 
   footer:
-    displayCopyright: true
+    displayCopyright: false
