--- a/native/oats/Cargo.toml
+++ b/native/oats/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "oats"
 version = "0.1.0"
-authors = []
-edition = "2018"
+authors = ["Haile Lagi"]
+edition = "2021"
 
 [lib]
 name = "oats"
@@ -23,3 +23,4 @@ hashbrown = "0.13"
 object_store = "0.11.0"
 proptest = "1.4.0"
 quickcheck = "1.0.3"
+tokio = "1.41.0"
