wip port ets test suite
Signed-off-by: Haile Lagi <52631736+hailelagi@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,15 @@ erl_crash.dump
 .elixir_ls
 
 priv/native/liboats.so
+
 todo.txt
+
+docs/decisions.md
+
+docs/inspiration.md
+
+# erlang test suite
+/log
+
+priv/native/liboats.so
+
