--- a/native/oats/Cargo.toml
+++ b/native/oats/Cargo.toml
@@ -25,3 +25,8 @@ proptest = "1.4.0"
 quickcheck = "1.0.3"
 tokio = "1.41.0"
 parking_lot = "0.12.3"
+
+# postgres interop
+tokio-postgres = "0.7.12"
+postgres-openssl = "0.5.0"
+postgres-types = "0.2.8"
