--- a/native/oats/Cargo.toml
+++ b/native/oats/Cargo.toml
@@ -30,3 +30,5 @@ parking_lot = "0.12.3"
 tokio-postgres = "0.7.12"
 postgres-openssl = "0.5.0"
 postgres-types = "0.2.8"
+
+differential-dataflow = "0.13.1"
